--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
         format_sql:  true
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
   data:
     mongodb:
       uri: mongodb://localhost:27017/Blog-Management
